--- a/src/stylesheet/index.css
+++ b/src/stylesheet/index.css
@@ -14,6 +14,10 @@ body {
   --text-light: gray;
 }
 
+header {
+  margin-top: 4rem;
+}
+
 h1 {
   font-size: 1.5rem;
 }
@@ -64,14 +68,12 @@ input,
 label {
   width: 100%;
   border: none;
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
 label {
   text-align: left;
-  font-size: 0.9rem;
   font-weight: 500;
-  margin: 0 8px;
 }
 
 input {
@@ -87,7 +89,7 @@ input:focus {
 .circle {
   display: inline-block;
   margin: 2rem;
-  padding: 1.3rem 1.5rem;
+  padding: 1.3rem 1.6rem;
   border-radius: 50%;
   color: white;
   background-color: var(--secondary);
